header fix, spacing on involvement

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -254,6 +254,10 @@ a {
         padding-right: 30px;
         padding-left: 30px;
     }
+
+    .translate {
+        transform: translateY(-50%);
+    }
 }
 
 #map {
